Bug 476482 - Widgets' activation shortcuts don't close their popups anymore
Summary: Widgets' activation shortcuts don't close their popups anymore
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: general (other bugs)
Version First Reported In: master
Platform: Other Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords: qt6, regression
: 472871 477412 477683 (view as bug list)
Depends on:
Blocks:
 
Reported: 2023-11-02 21:05 UTC by Nate Graham
Modified: 2023-11-28 20:38 UTC (History)
8 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nate Graham 2023-11-02 21:05:45 UTC
Plasma 6 Wayland compiled from source this morning.

STEPS TO REPRODUCE
1. Press Meta key to open Kickoff
2. Press it again

OBSERVED RESULT
Kickoff remains open

EXPECTED RESULT
Kickoff closes

ADDITIONAL INFORMATION
Also reproduces for custom shortcuts, e.g. my Meta+N shortcut to open a Notes widget on my panel no longer closes it.
Comment 1 Nate Graham 2023-11-06 14:51:40 UTC
*** Bug 472871 has been marked as a duplicate of this bug. ***
Comment 2 Leia 2023-11-14 20:56:54 UTC
can reproduce with kickoff but not with kicker or application dashboard, they close as expected
Comment 3 Leia 2023-11-14 21:01:05 UTC
(In reply to Leia from comment #2)
> can reproduce with kickoff but not with kicker or application dashboard,
> they close as expected

actually nvm only application dashboard does mb
Comment 4 Bug Janitor Service 2023-11-21 09:54:47 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-framework/-/merge_requests/982
Comment 5 Marco Martin 2023-11-21 09:55:42 UTC
it wasn't always reproduced as depended on an uninitialized bool so it was a roll of dice
Comment 6 Marco Martin 2023-11-21 10:23:31 UTC
Git commit 9aacf20e2aed12088e0dbeda9b7a88b0092f34b3 by Marco Martin.
Committed on 21/11/2023 at 11:23.
Pushed by mart into branch 'master'.

Initialize activationTogglesExpanded to true

activationTogglesExpanded was actually uninitialized. Initialize it to true
to keep the default behavior of plasma5 where this was true as well and retriggering the
shortcut of an open popup closes it

M  +1    -1    src/plasmaquick/private/appletquickitem_p.h

https://invent.kde.org/plasma/plasma-framework/-/commit/9aacf20e2aed12088e0dbeda9b7a88b0092f34b3
Comment 7 Nate Graham 2023-11-26 17:00:56 UTC
*** Bug 477412 has been marked as a duplicate of this bug. ***
Comment 8 Nate Graham 2023-11-28 20:38:00 UTC
*** Bug 477683 has been marked as a duplicate of this bug. ***