Initialize activationTogglesExpanded to true

activationTogglesExpanded was actually uninitialized. Initialize it to true
to keep the default behavior of plasma5 where this was true as well and retriggering the
shortcut of an open popup closes it

BUG:476482